Bug #7192 Specify --with-collation doesn't work for connections?
Submitted: 11 Dec 2004 12:22 Modified: 18 Aug 2006 14:48
Reporter: Erika Mustermann
Status: Closed
Category:Server: Installing Severity:S3 (Non-critical)
Version:4.1.7 OS:Linux (Linux)
Assigned to: Alexander Barkov Target Version:

[11 Dec 2004 12:22] Erika Mustermann
Description:
Compiling and starting mysql-4.1.7 this way:
========
# env CFLAGS="-O2 -mcpu=pentiumpro" CXX=gcc CXXFLAGS="-O2 -mcpu=pentiumpro
-felide-constructors" ./configure --prefix=/tmp/mysql --with-extra-charsets=complex
--enable-thread-safe-client --enable-local-infile --enable-assembler
--with-charset=latin1 --with-collation=latin1_german1_ci
# make
# make install
# scripts/mysql_install_db
# /tmp/mysql/bin/mysqld_safe &
========

returns, when asking for the collation_connection:

========
# /tmp/mysql/bin/mysql -uroot
Welcome to the MySQL monitor.  Commands end with ; or \g.
Your MySQL connection id is 1 to server version: 4.1.7

Type 'help;' or '\h' for help. Type '\c' to clear the buffer.

mysql> SHOW VARIABLES LIKE 'coll%';
+----------------------+-------------------+
| Variable_name        | Value             |
+----------------------+-------------------+
| collation_connection | latin1_swedish_ci |
| collation_database   | latin1_german1_ci |
| collation_server     | latin1_german1_ci |
+----------------------+-------------------+
3 rows in set (0.01 sec)

========

To my understanding it should give 'collation_connection=latin1_german1_ci' and there
seems to be no way (except in using SQL-statements inside the connection) to change this
default behaviour!?

How to repeat:
See above.
[24 Apr 2005 12:40] Gabor Handon
Iam using deb packages.
I cant set any collation variables in my.cnf:
Where and how can set these?
OS: debian
MYSQL: 4.1.11

| character_set_client            | latin1                      |
| character_set_connection        | latin1                      |
| character_set_database          | latin2                      |
| character_set_results           | latin1                      |
| character_set_server            | latin2                      |
| character_set_system            | utf8                        |
| character_sets_dir              | /usr/share/mysql/charsets/  |
| collation_connection            | latin1_swedish_ci           |
| collation_database              | latin2_hungarian_ci         |
| collation_server                | latin2_hungarian_ci         |

what if i need latin2 with hungarian collation?
[1 Jan 2006 12:35] Timo Maier
This bugs still isn't resolved.
[30 Jun 2006 13:51] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/8549
[7 Jul 2006 14:15] Alexander Barkov
Pushed into 5.0.24-kt
TODO: merge to 5.0 common and 5.1
[7 Aug 2006 8:28] Alexander Barkov
Merged into 5.0.25 and 5.1.12.
[11 Aug 2006 10:23] Bugs System
A patch for this bug has been committed. After review, it may
be pushed to the relevant source trees for release in the next
version. You can access the patch from:

  http://lists.mysql.com/commits/10297

ChangeSet@1.2533, 2006-08-11 13:14:26+05:00, bar@mysql.com +1 -0
  Bug#7192 Specify --with-collation doesn't work for connections?
  --with-collation worked only on the server side.
  Client side ignored this argument, so collation_connection
  was not properly set (remained latin1_swedish_ci).
[18 Aug 2006 14:48] Jon Stephens
Thank you for your bug report. This issue has been committed to our source repository of
that product and will be incorporated into the next release.

If necessary, you can access the source repository and build the latest available
version, including the bug fix. More information about accessing the source trees is
available at

    http://dev.mysql.com/doc/en/installing-source.html

Documented bugfix in 4.1.22, 5.0.25, and 5.1.12 changelogs.
[30 Aug 2006 15:10] Reggie Burnett
merged to 5.0.25 today
[12 Sep 2006 16:26] Reggie Burnett
pushed to 5.1.12 today